--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             <!-- Nav -->
             <nav id="nav">
                 <ul class="links">
-                    <li class="active"><a>Moi et mes projets</a></li>
+                    <li class="active"><a href="index.html">Moi</a></li>
+                    <li><a href="projets.html">Projets</a></li>
+                    <li><a href="formation.html">Formation</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="skills.html">Compétences</a></li>
                 </ul>
                 <ul class="icons">
                     <li><a href="https://www.linkedin.com/in/dmytro-lunhu"
@@ -52,88 +56,11 @@
                             Je suis passionné, travaillant, doté de sens logique, curieux et bien organisé.
                             Je possède également une expérience dans divers domaines incluant manager d'une équipe </p>
                         <hr style="height:20px;background-color:#d3d3d3;" />
-                        <h2>Projets en détails...</h2>
+                        <h3> <a href="projets.html">- - - Aller aux projets - - -</a></h3>
                         <p></p>
                     </header>
 
-                    <header class="posts">
-                        <!-- <span class="date">Decembre 2020</span> -->
-                        <h2><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/queueIO/">Queue.io</a></h2>
-                        <h3>Java, JavaScript,
-                            Android Studio, Visual Studio Code, React JS, Node.js, PostgresSQL, Redis, Heroku, Twillio, Insomnia.</h3>
-                        <p>Application: "File d'attente virtuelle."
-                            Cette application est composée de trois parties principales: les entreprises, les clients et les employés, où plusieurs technologies sont mises en œuvre à travers lesquelles les entreprises et les clients peuvent être gérés.
-                            Via un terminal employé, il est possible de gérer les clients qui sont dans la file d'attente.
-                        </p>
-                    </header>
-                    <a href="#" class="image main"><img src="images/queue.jpg" alt="" /></a>
-                    <ul class="actions special">
-                        <li><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/queueIO/" class="button large">En savoir plus</a></li>
-                    </ul>
-                </article>
-
-                <!-- Posts -->
-                <section class="posts">
-                    <article>
-                        <header>
-                            <!-- <span class="date">April 14, 2017</span> -->
-                            <h2><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/memorygame/">Jeu de mémoire</a></h2>
-                            <h3>JavaScript, Visual Studio Code</h3>
-                        </header>
-                        <a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/memorygame/" class="image fit"><img
-                                src="images/memory-game.jpg" alt="" /></a>
-                        <p>Ce jeu consiste à retrouver les paires d'images correspondantes. Au début de la partie, après un positionnement aléatoire, toutes les miniatures restent affichées durant quelques secondes. Puis elles disparaissent. Ce jeu fait donc appel à la concentration.</p>
-                        <ul class="actions special">
-                            <li><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/memorygame/" class="button">En savoir plus</a></li>
-                        </ul>
-                    </article>
-                    <article>
-                        <header>
-                            <!-- <span class="date">September, 2020</span> -->
-                            <h2><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/myFirstSpring/">News</a></h2>
-                            <h3>Java, Spring Boot, MySQL, Intellij idea</h3>
-                        </header>
-                        <a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/myFirstSpring/" class="image fit"><img
-                                src="images/news.jpg" alt="" /></a>
-                        <p>Java EE. Site web de nouvelles (articles)
-                            Développement du site Web contenant des articles.
-                            Un utilisateur peut accéder aux actualités, lire, ajouter des articles, apporter des corrections aux articles ou même les supprimer.</p>
-                        <ul class="actions special">
-                            <li><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/myFirstSpring/" class="button">En savoir
-                                    plus</a></li>
-                        </ul>
-                    </article>
-                    <article>
-                        <header>
-                            <!-- <span class="date">April 22, 2017</span> -->
-                            <h2><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/C%23_gestionDeContacts/">Application de gestion de contacts</a></h2>
-                            <h3>C#, WPF, Visual Studio</h3>
-                        </header>
-                        <a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/C%23_gestionDeContacts/" class="image fit"><img
-                                src="images/contacts.jpg" alt="" /></a>
-                        <p>Création d’une application de Gestion Contact où l'utilisateur peut ajouter des informations personnelles et les modifier ou supprimer.</p>
-                        <ul class="actions special">
-                            <li><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/C%23_gestionDeContacts/" class="button">En savoir plus</a>
-                            </li>
-                        </ul>
-                    </article>
-                    <article>
-                        <header>
-                            <!-- <span class="date">April 18, 2017</span> -->
-                            <h2><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/DI-boutique/">Di-Boutique</a></h2>
-                            <h3>NetBeans, Apache Tomcat, MariaBD, DBeaver.</h3>
-                        </header>
-                        <a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/DI-boutique/" class="image fit"><img
-                                src="images/di-boutique.jpg" alt="" /></a>
-                        <p>Création du site web "DI-Boutique" de vente des chaussures. L'utilisateur peut voir des produits par catégories et leur détails, s'inscrire et se connecter pour accéder au panier d'achat où il peut faire des modifications de produits. Création de la page d'admin</p>
-                        <ul class="actions special">
-                            <li><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/DI-boutique/" class="button">En savoir plus</a>
-                            </li>
-                        </ul>
-                    </article>
-
-                </section>
-                <!-- Footer -->
+                    <!-- Footer -->
             </div>
             <!-- Footer -->
             <footer id="footer">
