--- a/projets.html
+++ b/projets.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html">Moi</a></li>
                     <li class="active"><a href="projets.html">Projets</a></li>
                     <li><a href="formation.html">Formation</a></li>
-                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="experience.html">Expérience</a></li>
                     <li><a href="skills.html">Compétences</a></li>
                 </ul>
                 <ul class="icons">
