--- a/skills.html
+++ b/skills.html
@@ -61,7 +61,7 @@
                                 <tbody>
                                     <tr>
                                         <td>Langages de programmation</td>
-                                        <td>ava (SE, J2EE, Android), JavaScript, C/C++, C#, PHP, SQL</td>
+                                        <td>Java (SE, J2EE, Android), JavaScript, C/C++, C#, PHP, SQL</td>
                                     </tr>
                                     <tr>
                                         <td>Langages de structurations</td>
