--- a/skills.html
+++ b/skills.html
@@ -13,6 +13,9 @@
         <div id="container" class="fade-in">
             <!-- Intro -->
             <div id="intro">
+                <div style="width: 100px; height: 100px; float: right">
+                    <img src="images/me.JPG" class="image fit" alt="Dmytro Lunhu" />
+                </div><br> 
                 <h1>Dmytro Lunhu</h1>
                 <p>Développeur<br />
                     Java J2EE C++ C# JavaScript TypeScript PHP SQL Android Spring React Node Angular ASP.NET Core SQL NoSQL</p>
@@ -30,9 +33,9 @@
                 <ul class="links">
                     <li><a href="index.html">Moi</a></li>
                     <li><a href="projets.html">Projets</a></li>
-                    <li><a href="formation.html">Formation</a></li>
-                    <li><a href="experience.html">Expérience</a></li>
                     <li class="active"><a href="skills.html">Compétences</a></li>
+                    <li><a href="experience.html">Expérience</a></li>
+                    <li><a href="formation.html">Formation</a></li>
                 </ul>
                 <ul class="icons">
                     <li><a href="https://www.linkedin.com/in/dmytro-lunhu"
