--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
                     <li class="active"><a href="index.html">Moi</a></li>
                     <li><a href="projets.html">Projets</a></li>
                     <li><a href="skills.html">Compétences</a></li>
-                    <li><a href="formation.html">Formation</a></li>
                     <li><a href="experience.html">Expérience</a></li>
-
+                    <li><a href="formation.html">Formation</a></li>
                 </ul>
                 <ul class="icons">
                     <li><a href="https://www.linkedin.com/in/dmytro-lunhu"
@@ -60,10 +59,15 @@
                             Je suis passionné, travaillant, doté de sens logique, curieux et bien organisé.
                             Je possède également une expérience dans divers domaines incluant manager d'une équipe </p>
                         <hr style="height:20px;background-color:#d3d3d3;" />
-                        <h3> <a href="projets.html">- - - Aller aux projets - - -</a></h3>
-                        <p></p>
+                        <p><a href="projets.html">Projets</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="skills.html">Compétences</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="experience.html">Expérience</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="formation.html">Formation</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
                     </header>
-
                     <!-- Footer -->
             </div>
             <!-- Footer -->
