--- a/formation.html
+++ b/formation.html
@@ -86,6 +86,22 @@
 
                     <!-- Footer -->
             </div>
+            <div id="main">
+                <!-- Featured Post -->
+                <article class="post featured">
+                    <header class="major">
+                        <hr style="height:20px;background-color:#d3d3d3;" />
+                        <p><a href="projets.html">Projets</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="skills.html">Compétences</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="experience.html">Expérience</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="formation.html">Formation</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                    </header>
+                    <!-- Footer -->
+            </div>
             <!-- Footer -->
             <footer id="footer">
                 <section>
