--- a/projets.html
+++ b/projets.html
@@ -34,9 +34,8 @@
                     <li><a href="index.html">Moi</a></li>
                     <li class="active"><a href="projets.html">Projets</a></li>
                     <li><a href="skills.html">Compétences</a></li>
-                    <li><a href="formation.html">Formation</a></li>
                     <li><a href="experience.html">Expérience</a></li>
-
+                    <li><a href="formation.html">Formation</a></li>
                 </ul>
                 <ul class="icons">
                     <li><a href="https://www.linkedin.com/in/dmytro-lunhu"
@@ -128,9 +127,24 @@
                             </li>
                         </ul>
                     </article>
-
                 </section>
                 <!-- Footer -->
+            </div>
+            <div id="main">
+                <!-- Featured Post -->
+                <article class="post featured">
+                    <header class="major">
+                        <hr style="height:20px;background-color:#d3d3d3;" />
+                        <p><a href="projets.html">Projets</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="skills.html">Compétences</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="experience.html">Expérience</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                        <p><a href="formation.html">Formation</a></p>
+                        <hr style="height:5px;background-color:#d3d3d3;" />
+                    </header>
+                    <!-- Footer -->
             </div>
             <!-- Footer -->
             <footer id="footer">
