--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
                 <article class="post featured">
                     <header class="major">
                         <h2>Qui suis je?</h2>
-                        <p>Tout d'abord je suis développeur WEB et logiciels avec des connaissance plusieurs langages de programmation et des concepts POO.
-                        <p>Je peux analyser le code existant, observer et introduire de nouvelles fonctionnalités utilisant de bonne pratique de développement.</p>
+                        <p>Tout d'abord je suis développeur WEB et des logiciels avec des connaissances de plusieurs langages de programmation et des concepts POO.
+                        <p>Je peux analyser le code existant, observer et introduire de nouvelles fonctionnalités utilisant une bonne pratique de développement.</p>
                         <p>Je prends part à la conception de l'architecture logicielle, des méthodes de débogage des applications.</p>
                         <p>Je connais bien Agile, Jira, Git, Bitbucket.</p>
-                        <p>Je parle plusieurs langues, français et anglais inclus.</p>
-                        <p>De plus, grâce à mes compétences professionnelles et mon expérience, je suis capable de travailler en équipe ou de façon autonome. J'ai de bonnes capacités d'analyse et d’aptitude à résoudre les problèmes.
-                            Je suis passionné, travaillant, doté de sens logique, curieux et bien organisé.
-                            Je possède également une expérience dans divers domaines incluant manager d'une équipe </p>
+                        <p>Je parle plusieurs langues, français et anglais inclusivement.</p>
+                        <p>De plus, grâce à mes compétences professionnelles et mon expérience passée, je suis capable de travailler en équipe ou de façon autonome. J'ai de bonnes capacités d'analyse et je possède des aptitudes à résoudre les problèmes. Je suis passionné, travaillant, doté de sens de logique, curieux et bien organisé. Je possède également une expérience dans divers domaines incluant la gestion des équipes.</p>
                         <hr style="height:20px;background-color:#d3d3d3;" />
                         <p><a href="projets.html">Projets</a></p>
                         <hr style="height:5px;background-color:#d3d3d3;" />
@@ -75,7 +73,7 @@
                 <section>
                     <h2>Avez-vous des quéstion?</h2>
                     <div>
-                        <h4>Alpelez-moi alors... ou écrivez! </h4>
+                        <h4>Appelez moi alors... ou écrivez! </h4>
                         <h6></h6>
                     </div>
                 </section>
