--- a/formation.html
+++ b/formation.html
@@ -107,7 +107,7 @@
                 <section>
                     <h2>Avez-vous des quéstion?</h2>
                     <div>
-                        <h4>Alpelez-moi alors... ou écrivez! </h4>
+                        <h4>Appelez moi alors... ou écrivez! </h4>
                         <h6></h6>
                     </div>
                 </section>
