--- a/projets.html
+++ b/projets.html
@@ -26,7 +26,7 @@
 
             <!-- Header -->
             <header id="header">
-                <a href="index.html" class="logo"> Dmytro Lunhu</a>
+                <a href="index.html" class="logo"> PORTFOLIO</a>
             </header>
             <!-- Nav -->
             <nav id="nav">
