--- a/formation.html
+++ b/formation.html
@@ -42,6 +42,8 @@
                            class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                     <li><a href="https://bitbucket.org/dmytrolunhu_isi/dmytro_lunhu_projets/src/master/" class="icon brands fa-github"><span
                                 class="label">GitHub</span></a></li>
+                    <li><a href="images/CV_D-Lunhu.pdf" download><span class="label">Télécharger mon CV</span></a>
+                    </li>
                 </ul>
             </nav>
             <!-- Main -->
